--- a/3hrs js project attempt-2/index.html
+++ b/3hrs js project attempt-2/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Keeper</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         .centered-content {
             text-align: center;
