some async js code added

--- a/3hrs js project attempt-2/index.html
+++ b/3hrs js project attempt-2/index.html
@@ -345,6 +345,6 @@ _blank: Load the URL into a new browsing context. This is usually a tab, but use
     <!--javascript and axios link  -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"></script>
-    <script src="index4.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
